Fix horizontal alignment #152
The padding of the main had to be subtracted.

--- a/net/styles.css
+++ b/net/styles.css
@@ -16,7 +16,8 @@ main {
 @media (min-width: 960px) {
     main {
         position: absolute;
-        left: calc(50% - 480px);
+        /* Subtract half of width and the padding */
+        left: calc(50% - 480px - 20px);
         width: 960px;
     }
 }
